--- a/Makefile.in
+++ b/Makefile.in
@@ -284,14 +284,12 @@ DEPDIR = @DEPDIR@
 ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
-EGREP = @EGREP@
 ETAGS = @ETAGS@
 EXEEXT = @EXEEXT@
 EXTRA_CFLAGS = @EXTRA_CFLAGS@
 FISH_COMPLETION_CFLAGS = @FISH_COMPLETION_CFLAGS@
 FISH_COMPLETION_DIR = @FISH_COMPLETION_DIR@
 FISH_COMPLETION_LIBS = @FISH_COMPLETION_LIBS@
-GREP = @GREP@
 GREP_PATH = @GREP_PATH@
 HAVE_CXX11 = @HAVE_CXX11@
 INSTALL = @INSTALL@
@@ -388,7 +386,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 SUBDIRS = lib $(am__append_1) src
-man1_MANS = man/ugrep.1
+man1_MANS = man/ugrep.1 man/ugrep-indexer.1
 EXTRA_DIST = README.md LICENSE.txt CONTRIBUTING.md CODE_OF_CONDUCT.md
 UGREP = $(shell pwd)/$(top_builddir)/bin/ugrep$(EXEEXT)
 CONFIGH = $(shell pwd)/$(top_builddir)/config.h
@@ -1005,10 +1003,11 @@ all-local:	cp2bin
 .PHONY:		cp2bin
 
 # to copy the ugrep binary to the local ugrep/bin/ugrep and ugrep/bin/ug (symlinks DO NOT WORK for ug with bash when installed)
-cp2bin:		$(top_builddir)/src/ugrep$(EXEEXT)
+cp2bin:		$(top_builddir)/src/ugrep$(EXEEXT) $(top_builddir)/src/ugrep-indexer$(EXEEXT)
 		@rm -f $(top_builddir)/bin/ugrep$(EXEEXT)
+		@rm -f $(top_builddir)/bin/ugrep-indexer$(EXEEXT)
 		@mkdir -p $(top_builddir)/bin && \
-		  cp -f $< $(top_builddir)/bin/ugrep$(EXEEXT) && \
+		  cp -f $^ $(top_builddir)/bin/ && \
 		  cd $(top_builddir)/bin && \
 		  rm -f ug$(EXEEXT) && \
 		  cp -f ugrep$(EXEEXT) ug$(EXEEXT)
@@ -1091,6 +1090,7 @@ install-data-hook:
 
 uninstall-hook:
 		@rm -f $(DESTDIR)$(bindir)/ug$(EXEEXT) $(DESTDIR)$(bindir)/ugrep$(EXEEXT)
+		@rm -f $(DESTDIR)$(bindir)/ugrep-indexer$(EXEEXT)
 		@rm -f $(DESTDIR)$(bindir)/ug+ $(DESTDIR)$(bindir)/ugrep+
 		@rm -rf $(DESTDIR)$(datadir)/ugrep
 
