--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -122,10 +122,11 @@ am_libreflex_a_OBJECTS = libreflex_a-convert.$(OBJEXT) \
 	libreflex_a-matcher_avx2.$(OBJEXT) \
 	libreflex_a-matcher_avx512bw.$(OBJEXT) \
 	libreflex_a-pattern.$(OBJEXT) libreflex_a-posix.$(OBJEXT) \
+	libreflex_a-simd_sse2.$(OBJEXT) \
 	libreflex_a-simd_avx2.$(OBJEXT) \
 	libreflex_a-simd_avx512bw.$(OBJEXT) \
-	libreflex_a-unicode.$(OBJEXT) libreflex_a-utf8.$(OBJEXT) \
-	libreflex_a-block_scripts.$(OBJEXT) \
+	libreflex_a-simd_neon.$(OBJEXT) libreflex_a-unicode.$(OBJEXT) \
+	libreflex_a-utf8.$(OBJEXT) libreflex_a-block_scripts.$(OBJEXT) \
 	libreflex_a-language_scripts.$(OBJEXT) \
 	libreflex_a-letter_scripts.$(OBJEXT) \
 	libreflex_a-composer.$(OBJEXT)
@@ -160,6 +161,8 @@ am__depfiles_remade = ./$(DEPDIR)/libreflex_a-block_scripts.Po \
 	./$(DEPDIR)/libreflex_a-posix.Po \
 	./$(DEPDIR)/libreflex_a-simd_avx2.Po \
 	./$(DEPDIR)/libreflex_a-simd_avx512bw.Po \
+	./$(DEPDIR)/libreflex_a-simd_neon.Po \
+	./$(DEPDIR)/libreflex_a-simd_sse2.Po \
 	./$(DEPDIR)/libreflex_a-unicode.Po \
 	./$(DEPDIR)/libreflex_a-utf8.Po
 am__mv = mv -f
@@ -245,14 +248,12 @@ DEPDIR = @DEPDIR@
 ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
-EGREP = @EGREP@
 ETAGS = @ETAGS@
 EXEEXT = @EXEEXT@
 EXTRA_CFLAGS = @EXTRA_CFLAGS@
 FISH_COMPLETION_CFLAGS = @FISH_COMPLETION_CFLAGS@
 FISH_COMPLETION_DIR = @FISH_COMPLETION_DIR@
 FISH_COMPLETION_LIBS = @FISH_COMPLETION_LIBS@
-GREP = @GREP@
 GREP_PATH = @GREP_PATH@
 HAVE_CXX11 = @HAVE_CXX11@
 INSTALL = @INSTALL@
@@ -349,45 +350,52 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 noinst_LIBRARIES = libreflex.a
-libreflex_a_CPPFLAGS = -I$(top_srcdir)/include $(SIMD_FLAGS) -DWITH_NO_INDENT -DWITH_NO_CODEGEN
+libreflex_a_CPPFLAGS = \
+	-I$(top_srcdir)/include \
+	$(SIMD_FLAGS) \
+	-DWITH_NO_INDENT \
+	-DWITH_NO_CODEGEN
+
 libreflex_a_SOURCES = \
-        $(top_srcdir)/include/reflex/abslexer.h \
-        $(top_srcdir)/include/reflex/absmatcher.h \
-        $(top_srcdir)/include/reflex/bits.h \
-        $(top_srcdir)/include/reflex/boostmatcher.h \
-        $(top_srcdir)/include/reflex/convert.h \
-        $(top_srcdir)/include/reflex/debug.h \
-        $(top_srcdir)/include/reflex/error.h \
-        $(top_srcdir)/include/reflex/flexlexer.h \
-        $(top_srcdir)/include/reflex/input.h \
-        $(top_srcdir)/include/reflex/matcher.h \
-        $(top_srcdir)/include/reflex/pattern.h \
-        $(top_srcdir)/include/reflex/posix.h \
-        $(top_srcdir)/include/reflex/ranges.h \
-        $(top_srcdir)/include/reflex/setop.h \
-        $(top_srcdir)/include/reflex/simd.h \
-        $(top_srcdir)/include/reflex/stdmatcher.h \
-        $(top_srcdir)/include/reflex/timer.h \
-        $(top_srcdir)/include/reflex/traits.h \
-        $(top_srcdir)/include/reflex/unicode.h \
-        $(top_srcdir)/include/reflex/utf8.h \
-        convert.cpp \
-        debug.cpp \
-        error.cpp \
-        input.cpp \
-        matcher.cpp \
-        matcher_avx2.cpp \
-        matcher_avx512bw.cpp \
-        pattern.cpp \
-        posix.cpp \
-        simd_avx2.cpp \
-        simd_avx512bw.cpp \
-        unicode.cpp \
-        utf8.cpp \
-        block_scripts.cpp \
-        language_scripts.cpp \
-        letter_scripts.cpp \
-        composer.cpp
+	$(top_srcdir)/include/reflex/abslexer.h \
+	$(top_srcdir)/include/reflex/absmatcher.h \
+	$(top_srcdir)/include/reflex/bits.h \
+	$(top_srcdir)/include/reflex/boostmatcher.h \
+	$(top_srcdir)/include/reflex/convert.h \
+	$(top_srcdir)/include/reflex/debug.h \
+	$(top_srcdir)/include/reflex/error.h \
+	$(top_srcdir)/include/reflex/flexlexer.h \
+	$(top_srcdir)/include/reflex/input.h \
+	$(top_srcdir)/include/reflex/matcher.h \
+	$(top_srcdir)/include/reflex/pattern.h \
+	$(top_srcdir)/include/reflex/posix.h \
+	$(top_srcdir)/include/reflex/ranges.h \
+	$(top_srcdir)/include/reflex/setop.h \
+	$(top_srcdir)/include/reflex/simd.h \
+	$(top_srcdir)/include/reflex/stdmatcher.h \
+	$(top_srcdir)/include/reflex/timer.h \
+	$(top_srcdir)/include/reflex/traits.h \
+	$(top_srcdir)/include/reflex/unicode.h \
+	$(top_srcdir)/include/reflex/utf8.h \
+	convert.cpp \
+	debug.cpp \
+	error.cpp \
+	input.cpp \
+	matcher.cpp \
+	matcher_avx2.cpp \
+	matcher_avx512bw.cpp \
+	pattern.cpp \
+	posix.cpp \
+	simd_sse2.cpp \
+	simd_avx2.cpp \
+	simd_avx512bw.cpp \
+	simd_neon.cpp \
+	unicode.cpp \
+	utf8.cpp \
+	block_scripts.cpp \
+	language_scripts.cpp \
+	letter_scripts.cpp \
+	composer.cpp
 
 all: all-am
 
@@ -452,6 +460,8 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libreflex_a-posix.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libreflex_a-simd_avx2.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libreflex_a-simd_avx512bw.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libreflex_a-simd_neon.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libreflex_a-simd_sse2.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libreflex_a-unicode.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libreflex_a-utf8.Po@am__quote@ # am--include-marker
 
@@ -603,6 +613,20 @@ libreflex_a-posix.obj: posix.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libreflex_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libreflex_a-posix.obj `if test -f 'posix.cpp'; then $(CYGPATH_W) 'posix.cpp'; else $(CYGPATH_W) '$(srcdir)/posix.cpp'; fi`
 
+libreflex_a-simd_sse2.o: simd_sse2.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libreflex_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libreflex_a-simd_sse2.o -MD -MP -MF $(DEPDIR)/libreflex_a-simd_sse2.Tpo -c -o libreflex_a-simd_sse2.o `test -f 'simd_sse2.cpp' || echo '$(srcdir)/'`simd_sse2.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/libreflex_a-simd_sse2.Tpo $(DEPDIR)/libreflex_a-simd_sse2.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='simd_sse2.cpp' object='libreflex_a-simd_sse2.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libreflex_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libreflex_a-simd_sse2.o `test -f 'simd_sse2.cpp' || echo '$(srcdir)/'`simd_sse2.cpp
+
+libreflex_a-simd_sse2.obj: simd_sse2.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libreflex_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libreflex_a-simd_sse2.obj -MD -MP -MF $(DEPDIR)/libreflex_a-simd_sse2.Tpo -c -o libreflex_a-simd_sse2.obj `if test -f 'simd_sse2.cpp'; then $(CYGPATH_W) 'simd_sse2.cpp'; else $(CYGPATH_W) '$(srcdir)/simd_sse2.cpp'; fi`
+@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/libreflex_a-simd_sse2.Tpo $(DEPDIR)/libreflex_a-simd_sse2.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='simd_sse2.cpp' object='libreflex_a-simd_sse2.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libreflex_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libreflex_a-simd_sse2.obj `if test -f 'simd_sse2.cpp'; then $(CYGPATH_W) 'simd_sse2.cpp'; else $(CYGPATH_W) '$(srcdir)/simd_sse2.cpp'; fi`
+
 libreflex_a-simd_avx2.o: simd_avx2.cpp
 @am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libreflex_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libreflex_a-simd_avx2.o -MD -MP -MF $(DEPDIR)/libreflex_a-simd_avx2.Tpo -c -o libreflex_a-simd_avx2.o `test -f 'simd_avx2.cpp' || echo '$(srcdir)/'`simd_avx2.cpp
 @am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/libreflex_a-simd_avx2.Tpo $(DEPDIR)/libreflex_a-simd_avx2.Po
@@ -630,6 +654,20 @@ libreflex_a-simd_avx512bw.obj: simd_avx512bw.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='simd_avx512bw.cpp' object='libreflex_a-simd_avx512bw.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libreflex_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libreflex_a-simd_avx512bw.obj `if test -f 'simd_avx512bw.cpp'; then $(CYGPATH_W) 'simd_avx512bw.cpp'; else $(CYGPATH_W) '$(srcdir)/simd_avx512bw.cpp'; fi`
+
+libreflex_a-simd_neon.o: simd_neon.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libreflex_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libreflex_a-simd_neon.o -MD -MP -MF $(DEPDIR)/libreflex_a-simd_neon.Tpo -c -o libreflex_a-simd_neon.o `test -f 'simd_neon.cpp' || echo '$(srcdir)/'`simd_neon.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/libreflex_a-simd_neon.Tpo $(DEPDIR)/libreflex_a-simd_neon.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='simd_neon.cpp' object='libreflex_a-simd_neon.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libreflex_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libreflex_a-simd_neon.o `test -f 'simd_neon.cpp' || echo '$(srcdir)/'`simd_neon.cpp
+
+libreflex_a-simd_neon.obj: simd_neon.cpp
+@am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libreflex_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libreflex_a-simd_neon.obj -MD -MP -MF $(DEPDIR)/libreflex_a-simd_neon.Tpo -c -o libreflex_a-simd_neon.obj `if test -f 'simd_neon.cpp'; then $(CYGPATH_W) 'simd_neon.cpp'; else $(CYGPATH_W) '$(srcdir)/simd_neon.cpp'; fi`
+@am__fastdepCXX_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/libreflex_a-simd_neon.Tpo $(DEPDIR)/libreflex_a-simd_neon.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	$(AM_V_CXX)source='simd_neon.cpp' object='libreflex_a-simd_neon.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(AM_V_CXX@am__nodep@)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libreflex_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libreflex_a-simd_neon.obj `if test -f 'simd_neon.cpp'; then $(CYGPATH_W) 'simd_neon.cpp'; else $(CYGPATH_W) '$(srcdir)/simd_neon.cpp'; fi`
 
 libreflex_a-unicode.o: unicode.cpp
 @am__fastdepCXX_TRUE@	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libreflex_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libreflex_a-unicode.o -MD -MP -MF $(DEPDIR)/libreflex_a-unicode.Tpo -c -o libreflex_a-unicode.o `test -f 'unicode.cpp' || echo '$(srcdir)/'`unicode.cpp
@@ -853,6 +891,8 @@ distclean: distclean-am
 	-rm -f ./$(DEPDIR)/libreflex_a-posix.Po
 	-rm -f ./$(DEPDIR)/libreflex_a-simd_avx2.Po
 	-rm -f ./$(DEPDIR)/libreflex_a-simd_avx512bw.Po
+	-rm -f ./$(DEPDIR)/libreflex_a-simd_neon.Po
+	-rm -f ./$(DEPDIR)/libreflex_a-simd_sse2.Po
 	-rm -f ./$(DEPDIR)/libreflex_a-unicode.Po
 	-rm -f ./$(DEPDIR)/libreflex_a-utf8.Po
 	-rm -f Makefile
@@ -915,6 +955,8 @@ maintainer-clean: maintainer-clean-am
 	-rm -f ./$(DEPDIR)/libreflex_a-posix.Po
 	-rm -f ./$(DEPDIR)/libreflex_a-simd_avx2.Po
 	-rm -f ./$(DEPDIR)/libreflex_a-simd_avx512bw.Po
+	-rm -f ./$(DEPDIR)/libreflex_a-simd_neon.Po
+	-rm -f ./$(DEPDIR)/libreflex_a-simd_sse2.Po
 	-rm -f ./$(DEPDIR)/libreflex_a-unicode.Po
 	-rm -f ./$(DEPDIR)/libreflex_a-utf8.Po
 	-rm -f Makefile
